// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityQuestionVerify Tests should create security question verify UI elements 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.security.question.challenge.title",
        },
        "type": "Title",
      },
      {
        "noTranslate": true,
        "options": {
          "inputMeta": {
            "name": "credentials.answer",
            "secret": true,
          },
        },
        "translations": [
          {
            "i18nKey": "",
            "name": "label",
            "value": "security.disliked_food",
          },
        ],
        "type": "Field",
      },
      {
        "label": "oform.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`SecurityQuestionVerify Tests should create security question verify UI elements for custom question 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.security.question.challenge.title",
        },
        "type": "Title",
      },
      {
        "noTranslate": true,
        "options": {
          "inputMeta": {
            "name": "credentials.answer",
            "secret": true,
          },
        },
        "translations": [
          {
            "i18nKey": "",
            "name": "label",
            "value": "What is love?",
          },
        ],
        "type": "Field",
      },
      {
        "label": "oform.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`SecurityQuestionVerify Tests should create security question verify UI elements from remediation inputs when question is custom 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.security.question.challenge.title",
        },
        "type": "Title",
      },
      {
        "noTranslate": true,
        "options": {
          "inputMeta": {
            "name": "credentials.answer",
            "secret": true,
          },
        },
        "translations": [
          {
            "i18nKey": "",
            "name": "label",
            "value": "What is the answer to this custom question?",
          },
        ],
        "type": "Field",
      },
      {
        "label": "oform.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`SecurityQuestionVerify Tests should create security question verify UI elements from remediation inputs when question key should be localized 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.security.question.challenge.title",
        },
        "type": "Title",
      },
      {
        "noTranslate": true,
        "options": {
          "inputMeta": {
            "name": "credentials.answer",
            "secret": true,
          },
        },
        "translations": [
          {
            "i18nKey": "",
            "name": "label",
            "value": "security.disliked_food",
          },
        ],
        "type": "Field",
      },
      {
        "label": "oform.verify",
        "options": {
          "step": "mock-step",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
